#I used fluxbox's configure.in as a template of sorts, and 
#Redhat's autotools book. Thanks to everyone involved with both of these 
#projects!
#The build system was mostly done by edheldil & subvertir

dnl Initialize autoconf and automake

AC_INIT(gemrb/GemRB.cpp)
AC_CONFIG_AUX_DIR(admin)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(gemrb,0.1,no-define)

for top_builddir in . .. ../.. $ac_auxdir $ac_auxdir/..; do
  test -f $top_builddir/configure && break
done

dnl Check for required software.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
AC_LANG_CPLUSPLUS

dnl Determine prefix.
if test "x$prefix" = "xNONE"; then
  prefix=$ac_default_prefix
  ac_configure_args="$ac_configure_args --prefix $prefix"
fi

dnl Check for zlib.
CHECK_ZLIB()

dnl Check for libSDL Version 1.2 or greater, fail if not found.
AM_PATH_SDL(1.2.0, [], [AC_MSG_ERROR("You need SDL libraries version > 1.2.0 or greater to compile GemRB")])

dnl Check for OpenAL, fail if not found.
AC_CHECK_LIB([openal], [alutInit], [ /usr/bin/true ], [AC_MSG_ERROR("You need OpenAL libraries to compile GemRB")])

dnl Check for Python headers and libraries, fail if not found.
AM_CHECK_PYTHON_HEADERS([], [AC_MSG_ERROR("You need python headers to compile GemRB")])

dnl Check various functions.
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([rmdir])
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strrchr])
AC_CHECK_FUNCS([strtol])
AC_CHECK_FUNCS([strtoul])
AC_CHECK_FUNCS([strnlen])
AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([sys/stat.h])
AC_CHECK_LIB(dl, dlopen, [LIBDL="-ldl"], [LIBDL=""])
AC_SUBST(LIBDL)
AC_CHECK_LIB(pthread, main, [LIBPTHREAD="-lpthread"], [LIBPTHREAD=""])
AC_SUBST(LIBPTHREAD)

AC_C_CONST
AC_C_INLINE
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_STAT
AC_FUNC_STRFTIME
AC_FUNC_STRNLEN
AC_HEADER_DIRENT
#AC_HEADER_STDBOOL
AC_HEADER_TIME
#AC_REPLACE_FNMATCH
AC_STRUCT_TM
AC_TYPE_SIZE_T
#AC_FUNC_REALLOC

#CFLAGS="$CFLAGS $PYTHON_HEADERS"
#CXXFLAGS="$CXXFLAGS $PYTHON_HEADERS"
LIBS="$LIBS"
LDFLAGS="$LDFLAGS $LIBS"

AC_SUBST(LIBS)

AM_CONFIG_HEADER(config.h)

AC_OUTPUT(./Makefile
gemrb/Makefile 
gemrb/includes/Makefile 
gemrb/includes/sdl/Makefile 
gemrb/override/Makefile
gemrb/override/bg1/Makefile
gemrb/override/bg2/Makefile
gemrb/override/how/Makefile
gemrb/override/iwd/Makefile
gemrb/override/iwd2/Makefile
gemrb/override/pst/Makefile
gemrb/GUIScripts/Makefile
gemrb/GUIScripts/bg1/Makefile
gemrb/GUIScripts/bg2/Makefile
gemrb/GUIScripts/how/Makefile
gemrb/GUIScripts/iwd/Makefile
gemrb/GUIScripts/iwd2/Makefile
gemrb/GUIScripts/pst/Makefile
gemrb/plugins/Makefile 
gemrb/plugins/2DAImporter/Makefile 
gemrb/plugins/ACMImporter/Makefile 
gemrb/plugins/AREImporter/Makefile 
gemrb/plugins/BAMImporter/Makefile 
gemrb/plugins/BIFImporter/Makefile 
gemrb/plugins/BMPImporter/Makefile 
gemrb/plugins/CHUImporter/Makefile 
gemrb/plugins/CREImporter/Makefile 
gemrb/plugins/Core/Makefile 
gemrb/plugins/GAMImporter/Makefile 
gemrb/plugins/GUIScript/Makefile 
gemrb/plugins/IDSImporter/Makefile 
gemrb/plugins/INIImporter/Makefile 
gemrb/plugins/KEYImporter/Makefile 
gemrb/plugins/MOSImporter/Makefile 
gemrb/plugins/MUSImporter/Makefile 
gemrb/plugins/MVEPlayer/Makefile 
gemrb/plugins/PLTImporter/Makefile 
gemrb/plugins/SDLVideo/Makefile 
gemrb/plugins/TISImporter/Makefile 
gemrb/plugins/TLKImporter/Makefile 
gemrb/plugins/WEDImporter/Makefile 
gemrb/plugins/ZLibMgr/Makefile 
)
